hphp/hack/test/typecheck/strict_switch/noreturn_default.php
<?hh

function noreturn_default(mixed $x): void {
  if ($x is int) {
    if ($x is string) {
      switch ($x) {
        default:
          return;
      }
    }
  }
  return;
}
